--- a/spmdv2-dao/src/test/resources/templates/controller.java.vm
+++ b/spmdv2-dao/src/test/resources/templates/controller.java.vm
@@ -4,9 +4,10 @@ import cn.silence.dao.common.controller.CommonController;
 import cn.silence.dao.$!{cfg.abc}.entity.${entity};
 import cn.silence.dao.$!{cfg.abc}.entity.${entity}Vo;
 import cn.silence.dao.$!{cfg.abc}.service.${entity}Service;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import javax.annotation.Resource;
 
 /**
  * <p>
@@ -20,7 +21,7 @@ import org.springframework.web.bind.annotation.RestController;
 @RequestMapping("/${table.entityPath}/")
 public class ${table.controllerName} extends CommonController<${entity}Vo,${entity}> {
 
-    @Autowired
+    @Resource
     private ${entity}Service ${table.entityPath}Service;
 
 }
