--- a/spmdv2-dao/src/test/resources/templates/serviceImpl.java.vm
+++ b/spmdv2-dao/src/test/resources/templates/serviceImpl.java.vm
@@ -4,8 +4,10 @@ import cn.silence.dao.common.service.CommonServiceImpl;
 import cn.silence.dao.$!{cfg.abc}.entity.${entity};
 import cn.silence.dao.$!{cfg.abc}.entity.${entity}Vo;
 import cn.silence.dao.$!{cfg.abc}.mapper.${entity}Mapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import javax.annotation.Resource;
+
 
 /**
  * <p>
@@ -18,6 +20,6 @@ import org.springframework.stereotype.Service;
 @Service
 public class ${table.serviceImplName}  extends CommonServiceImpl<${entity}Vo,${entity}>  implements ${table.serviceName} {
 
-    @Autowired
+    @Resource
     private ${entity}Mapper $!{cfg.abc}Mapper;
 }
